--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "campfire",
     "bot"
   ],
-  "description": "A simple helpful robot for your Company",
+  "description": "An IRC robot for #tidepool",
   "licenses": [
     {
       "type": "MIT",
